<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="397dp"
        android:layout_height="371dp"
        android:background="@drawable/fond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <View

        android:id="@+id/view2"
        android:layout_width="397dp"
        android:layout_height="103dp"
        android:background="@drawable/button_ronder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view3"
        android:layout_width="171dp"
        android:layout_height="144dp"
        android:background="@drawable/button_ronder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="127dp"
        android:background="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nomPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasCoView"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasCoView"
        android:textColor="#696969"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pasCoView"
        android:textColor="#696969"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/voirHistorique"
        android:layout_width="397dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/white"
        android:text="@string/listeOffres"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/seCo"
        android:layout_width="397dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/white"
        android:text="@string/seCo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.829"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/seDecoBtn"
        android:layout_width="397dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/white"
        android:text="@string/seDeco"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.996"
        app:menu="@menu/bottom_navigation"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>